test/badSliceReplacement2.slq
// args: --run

def main(){
	x:=H(0:ğ”¹);
	a:=vector(10,x);
	a[0..2]:=a[0..3]; /// error
	forget(a);
	return x;
}
